--- a/.env
+++ b/.env
@@ -12,6 +12,12 @@ WALLETS_flexpool='
   0x4528339E70425eEaeb7eEf784Fc321070A6E6dC0
 '
 
+# access key instead of wallet
+# e.g https://www.viabtc.com/res/observer/home?access_key=b79e64cd71583df2cbf6cf4566208b33&coin=ETH
+WALLETS_viabtc='
+  b79e64cd71583df2cbf6cf4566208b33
+'
+
 WALLETS_ethermine='
   0x000158342dca155ad497ec7399b7f79857402c57
   0x61088117099A483c361e9184aa4997527bd31997
