--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ WALLETS_ethermine='
   0x416b40607f53368fa0608d0b25ab4e81d8d00ba5
 '
 
-WALLETS_eth2miners='
+WALLETS_2miners='
   0xce4801316d230cdbbdbb8e627df83c188281b2e8
   0xb81d1bdecbac5709b80e6f92f4d3d1325858bab6
   0x42e92c8566188b17bd9b1b163fd34f168bdb88fd
