db/periods: order by rewards closest to 24h period

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 WALLETS_crazypool='
+  0xd4d9146c2e89f0717af2abeb811b428aa0d9648b
   0x112f4d15a4dcf9c81cc878dcc8664eb4ada64d17
   0x7d24d34035fd1134f59fb24a1543787388c5595f
   0xb39aa9fdee07e7555a5fe21ec69c4de031cb8037
@@ -44,6 +45,7 @@ WALLETS_garimpool='
 '
 
 WALLETS_flexpool='
+  0x557C10260ba05342066A0442cdBaf1a28c852d60
   0x34D09CB4Cb3EA302410Ac6F41F6F135Dfd5Baf80
   0x9bB784e634f4d289586955aAF23692573fd3bb33
   0x3190cc5898238773bF974a04A39D991D31134dC8
@@ -72,7 +74,8 @@ WALLETS_flexpool='
 '
 
 # access key instead of wallet
-# e.g https://www.viabtc.com/res/observer/home?access_key=b79e64cd71583df2cbf6cf4566208b33&coin=ETH
+# e.g api https://www.viabtc.com/res/observer/home?access_key=b79e64cd71583df2cbf6cf4566208b33&coin=ETH
+# e.g dashboard https://www.viabtc.com/observer/dashboard?access_key=b79e64cd71583df2cbf6cf4566208b33&coin=ETH
 WALLETS_viabtc='
   b79e64cd71583df2cbf6cf4566208b33
 '
